--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -73,13 +73,14 @@ html {
 /* Sidebar links */
 .sidebar a {
   color: #fff;
+  text-decoration: none;
 }
 
 /* About section */
 .sidebar-about h1 {
   color: #fff;
   margin-top: 0;
-  font-family: "Abril Fatface", serif;
+  font-family: "Vollkorn", serif;
   font-size: 3.25rem;
 }
 
