--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -97,7 +97,7 @@ a.sidebar-nav-item:focus {
   text-decoration: underline;
 }
 .sidebar-nav-item.active {
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 /* Sticky sidebar
