--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -33,6 +33,7 @@
 
 html {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  letter-spacing: -0.5px
 }
 @media (min-width: 48em) {
   html {
@@ -42,6 +43,7 @@ html {
 @media (min-width: 58em) {
   html {
     font-size: 20px;
+    /* font-size: 18px; */
   }
 }
 
