--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/hyde.css" | relative_url }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet"> -->
+  <!-- <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
+
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/assets/apple-touch-icon-144-precomposed.png" | relative_url }}">
