--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -32,8 +32,8 @@
  */
 
 html {
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
-  letter-spacing: -0.5px
+  font-family: 'Varela','Karla','PT Sans', Helvetica, Arial, sans-serif;
+  letter-spacing: -0.04em
 }
 @media (min-width: 48em) {
   html {
@@ -42,7 +42,7 @@ html {
 }
 @media (min-width: 58em) {
   html {
-    font-size: 20px;
+    font-size: 1.07rem;
     /* font-size: 18px; */
   }
 }
@@ -131,7 +131,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .content {
-    max-width: 38rem;
+    max-width: 48rem;
     margin-left: 20rem;
     margin-right: 2rem;
   }
