--- a/assets/css/poole.css
+++ b/assets/css/poole.css
@@ -54,7 +54,8 @@ html {
 }
 @media (min-width: 38em) {
   html {
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 1.07rem;
   }
 }
 
@@ -259,7 +260,7 @@ tbody tr:nth-child(odd) th {
  */
 
 .lead {
-  font-size: 0.75rem;
+  font-size: 0.95rem;
   font-weight: 300;
 }
 
