--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -1,15 +1,10 @@
-<div class="sidebar">
-  <div class="container sidebar-sticky">
-    <div class="sidebar-about">
-      <h1>
-        <a href="{{ "/" | relative_url }}">
-          {{ site.title | escape }}
-        </a>
-      </h1>
-      <p class="lead">{{ site.description }}</p>
+<div class="bottombar">
+  <div class="container bottombar">
+    <div class="">
+
     </div>
 
-    <nav class="sidebar-nav">
+    <!-- <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ "/" | relative_url }}">Home</a>
 
       {% comment %}
@@ -26,10 +21,9 @@
         {% endif %}
       {% endfor %}
 
-      <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a> -->
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-    </nav>
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    </nav> -->
+
+    <p><a class="sidebar-nav-item" href="#">Top</a></p>
   </div>
 </div>
