--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -1,35 +1,35 @@
 /*
- *  __                  __
- * /\ \                /\ \
- * \ \ \___   __  __   \_\ \     __
- *  \ \  _ `\/\ \/\ \  /'_` \  /'__`\
- *   \ \ \ \ \ \ \_\ \/\ \_\ \/\  __/
- *    \ \_\ \_\/`____ \ \___,_\ \____\
- *     \/_/\/_/`/___/> \/__,_ /\/____/
- *                /\___/
- *                \/__/
- *
- * Designed, built, and released under MIT license by @mdo. Learn more at
- * https://github.com/poole/hyde.
- */
+*  __                  __
+* /\ \                /\ \
+* \ \ \___   __  __   \_\ \     __
+*  \ \  _ `\/\ \/\ \  /'_` \  /'__`\
+*   \ \ \ \ \ \ \_\ \/\ \_\ \/\  __/
+*    \ \_\ \_\/`____ \ \___,_\ \____\
+*     \/_/\/_/`/___/> \/__,_ /\/____/
+*                /\___/
+*                \/__/
+*
+* Designed, built, and released under MIT license by @mdo. Learn more at
+* https://github.com/poole/hyde.
+*/
 
 
 /*
- * Contents
- *
- * Global resets
- * Sidebar
- * Container
- * Reverse layout
- * Themes
- */
+* Contents
+*
+* Global resets
+* Sidebar
+* Container
+* Reverse layout
+* Themes
+*/
 
 
 /*
- * Global resets
- *
- * Update the foundational and global aspects of the page.
- */
+* Global resets
+*
+* Update the foundational and global aspects of the page.
+*/
 
 html {
   font-family: 'Varela','Karla','PT Sans', Helvetica, Arial, sans-serif;
@@ -49,11 +49,11 @@ html {
 
 
 /*
- * Sidebar
- *
- * Flexible banner for housing site name, intro, and "footer" content. Starts
- * out above content in mobile and later moves to the side with wider viewports.
- */
+* Sidebar
+*
+* Flexible banner for housing site name, intro, and "footer" content. Starts
+* out above content in mobile and later moves to the side with wider viewports.
+*/
 
 .sidebar {
   text-align: center;
@@ -103,10 +103,10 @@ a.sidebar-nav-item:focus {
 }
 
 /* Sticky sidebar
- *
- * Add the `sidebar-sticky` class to the sidebar's container to affix it the
- * contents to the bottom of the sidebar in tablets and up.
- */
+*
+* Add the `sidebar-sticky` class to the sidebar's container to affix it the
+* contents to the bottom of the sidebar in tablets and up.
+*/
 
 @media (min-width: 48em) {
   .sidebar-sticky {
@@ -118,11 +118,38 @@ a.sidebar-nav-item:focus {
 }
 
 
+/*bootom bar
+*
+* rbwtp made
+*/
+
+
+@media (max-width: 48em) {
+  .bottombar {
+    display: block;
+    text-align: center;
+    padding: 1rem 1rem;
+    color: rgba(255,255,255,.5);
+    background-color: #202020;
+  }
+}
+@media (min-width: 48em) {
+  .bottombar { display: none; }
+}
+
+
+/* Bottombar links */
+.bottombar a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
 /* Container
- *
- * Align the contents of the site above the proper threshold with some margin-fu
- * with a 25%-wide `.sidebar`.
- */
+*
+* Align the contents of the site above the proper threshold with some margin-fu
+* with a 25%-wide `.sidebar`.
+*/
 
 .content {
   padding-top:    4rem;
@@ -146,10 +173,10 @@ a.sidebar-nav-item:focus {
 
 
 /*
- * Reverse layout
- *
- * Flip the orientation of the page by placing the `.sidebar` on the right.
- */
+* Reverse layout
+*
+* Flip the orientation of the page by placing the `.sidebar` on the right.
+*/
 
 @media (min-width: 48em) {
   .layout-reverse .sidebar {
@@ -172,11 +199,11 @@ a.sidebar-nav-item:focus {
 
 
 /*
- * Themes
- *
- * As of v1.1, Hyde includes optional themes to color the sidebar and links
- * within blog posts. To use, add the class of your choosing to the `body`.
- */
+* Themes
+*
+* As of v1.1, Hyde includes optional themes to color the sidebar and links
+* within blog posts. To use, add the class of your choosing to the `body`.
+*/
 
 /* Base16 (http://chriskempson.github.io/base16/#default) */
 
