--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ "/assets/apple-touch-icon-144-precomposed.png" | relative_url }}">
-  <link rel="shortcut icon" href="{{ "/assets/favicon.ico" | relative_url }}">
+  <link rel="shortcut icon" href="{{ "/assets/favicon.png" | relative_url }}">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
