--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
     <div class="content container">
       {{ content }}
     </div>
+    <div class="bottombar">
     {% include bottombar.html %}
+    </div>
   </div>
 
 </body>
