--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,9 +19,9 @@
   <link rel="stylesheet" href="{{ "/assets/css/syntax.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/hyde.css" | relative_url }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Vollkorn">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans:300" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet"> -->
 
 
   <!-- Icons -->
