--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="posts">
-  {% for post in paginator.posts %}
+  {% for post in paginator.posts reversed %}
   <div class="post">
     <h1 class="post-title">
       <a href="{{ post.url | relative_url }}">
