--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -194,25 +194,31 @@ a {
   }
 
   pre {
-    padding: 0.8rem;
+    padding: 1.75rem;
     margin-top: 0;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
     color: $code-text-color;
     word-wrap: normal;
-    background-color: $code-bg-color;
-    border: solid 1px $border-color;
-    border-radius: 0.3rem;
+    // background-color: $code-bg-color;
+    background-color: #f9f9f9;
+    border: solid 1px #f7f7f7;
+    border-radius: 0.01rem;
+    -moz-box-shadow: 1px 1px #efefef;
+    -webkit-box-shadow: 1px 1px #efefef;
+    box-shadow: 1px 1px #efefef;
 
     > code {
-      padding: 0;
-      margin: 0;
-      font-size: 0.9rem;
+      padding: 1em;
+      margin: 1em;
+      font-family: 'Courier','PT mono', monospace;
+      font-size: 1.55rem;
       color: $code-text-color;
       word-break: normal;
       white-space: pre;
       background: transparent;
       border: 0;
+
     }
   }
 
@@ -227,7 +233,7 @@ a {
 
   .highlight pre,
   pre {
-    padding: 0.8rem;
+    padding: 1.75rem;
     overflow: auto;
     font-size: 0.9rem;
     line-height: 1.45;
