--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -211,7 +211,7 @@ a {
     > code {
       padding: 1em;
       margin: 1em;
-      font-family: 'Courier','PT mono', monospace;
+      font-family: monospace;
       font-size: 1.55rem;
       color: $code-text-color;
       word-break: normal;
